Comment out acknowledgements due to page limits, will add to camera ready later. #42

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -162,10 +162,11 @@
     \textsuperscript{\rm 2} Jet Propulsion Laboratory, 
     									   California Institute of Technology \\
     \textsuperscript{\rm 3} Montgomery Blair High School \\
-    \{hkerner\}@umd.edu, \{umaa.d.rebbapragada,
+    hkerner@umd.edu, \{umaa.d.rebbapragada,
     										kiri.l.wagstaff,
     										you.lu,
-    										eric.m.huff\}@jpl.nasa.gov
+    										eric.m.huff,
+    										jake.h.lee\}@jpl.nasa.gov
 }
 
 \begin{document}
@@ -808,26 +809,24 @@ the workflows of the domain scientists associated with the datasets in
 this study and add additional interpretation modules 
 including causal inference graphs.
 
+%\section{Acknowledgments}
+%We thank the NASA Center Innovation Fund and the NASA Science Mission 
+%Directorate (under the NASA Cross-Divisional AI Use Case Demonstration grants)
+% for supporting this work.
+%
+%We thank the UN Food and Agriculture Organization (FAO) and Dr. Ritvik Sahajpal
+%(University of Maryland/NASA Harvest) for providing the maize ground
+% observation dataset.
+% 
+% We thank Raymond Francis for analyzing the Navcam rover images to
+%identify targets considered to be ``novel'' for evaluating outlier
+%detection in the planetary rover scenario.
+%
+%Part of this research was carried out at the Jet Propulsion
+%Laboratory, California Institute of Technology, under a contract with
+%the National Aeronautics and Space Administration.
+
 \bibliography{dora_references}
-
-
-\section{Acknowledgments}
-We thank the NASA Center Innovation Fund and the NASA Science Mission 
-Directorate (under the NASA Cross-Divisional AI Use Case Demonstration grants)
- for supporting this work.
-
-\todo{Acknowledge DES?}
-We thank the UN Food and Agriculture Organization (FAO) and Dr. Ritvik Sahajpal
-(University of Maryland/NASA Harvest) for providing the maize ground
- observation dataset.
-
-We thank Raymond Francis for analyzing the Navcam rover images to
-identify targets considered to be ``novel'' for evaluating outlier
-detection in the planetary rover scenario.
-
-Part of this research was carried out at the Jet Propulsion
-Laboratory, California Institute of Technology, under a contract with
-the National Aeronautics and Space Administration.
 
 \end{document}
 
