--- a/publications/iaai21/dora_references.bib
+++ b/publications/iaai21/dora_references.bib
@@ -5,8 +5,7 @@
   year    = {2019},
   volume  = {20},
   number  = {96},
-  pages   = {1-7},
-  url     = {http://jmlr.org/papers/v20/19-011.html}
+  pages   = {1-7}
 }
 
 @article{prochaska2021deep,
@@ -109,7 +108,7 @@
 @article{markou2003novelty2,
   title={Novelty detection: a review—part 2:: neural network based approaches},
   author={Markou, Markos and Singh, Sameer},
-  journal={Signal processing},
+  journal={Signal Processing},
   volume={83},
   number={12},
   pages={2499--2521},
@@ -120,7 +119,7 @@
 @article{markou2003novelty,
   title={Novelty detection: a review—part 1: statistical approaches},
   author={Markou, Markos and Singh, Sameer},
-  journal={Signal processing},
+  journal={Signal Processing},
   volume={83},
   number={12},
   pages={2481--2497},
@@ -141,7 +140,7 @@
 @inproceedings{scholkopf1999support,
   title={Support vector method for novelty detection},
   author={Sch{\"o}lkopf, Bernhard and Williamson, Robert C and Smola, Alexander J and Shawe-Taylor, John and Platt, John C and others},
-  booktitle={NIPS},
+  booktitle={Neural Information Processing Systems},
   volume={12},
   pages={582--588},
   year={1999},
@@ -151,7 +150,7 @@
 @article{chandola2009anomaly,
   title={Anomaly detection: A survey},
   author={Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
-  journal={ACM computing surveys (CSUR)},
+  journal={ACM Computing Surveys (CSUR)},
   volume={41},
   number={3},
   pages={1--58},
@@ -162,7 +161,7 @@
 @inproceedings{breunig2000lof,
   title={LOF: identifying density-based local outliers},
   author={Breunig, Markus M and Kriegel, Hans-Peter and Ng, Raymond T and Sander, J{\"o}rg},
-  booktitle={Proceedings of the 2000 ACM SIGMOD international conference on Management of data},
+  booktitle={Proceedings of the 2000 ACM SIGMOD International Conference on Management of Data},
   pages={93--104},
   year={2000}
 }
@@ -170,7 +169,7 @@
 @inproceedings{akcay2018ganomaly,
   title={Ganomaly: Semi-supervised anomaly detection via adversarial training},
   author={Akcay, Samet and Atapour-Abarghouei, Amir and Breckon, Toby P},
-  booktitle={Asian conference on computer vision},
+  booktitle={Asian Conference on Computer Vision},
   pages={622--637},
   year={2018},
   organization={Springer}
@@ -226,7 +225,7 @@
 @inproceedings{liu2008isolation,
   title={Isolation forest},
   author={Liu, Fei Tony and Ting, Kai Ming and Zhou, Zhi-Hua},
-  booktitle={2008 eighth ieee international conference on data mining},
+  booktitle={2008 8th IEEE International Conference on Data Mining},
   pages={413--422},
   year={2008},
   organization={IEEE}
@@ -235,7 +234,7 @@
 @article{molero2013analysis,
   title={Analysis and optimizations of global and local versions of the RX algorithm for anomaly detection in hyperspectral data},
   author={Molero, Jos{\'e} Manuel and Garzon, Ester M and Garcia, Inmaculada and Plaza, Antonio},
-  journal={IEEE journal of selected topics in applied earth observations and remote sensing},
+  journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
   volume={6},
   number={2},
   pages={801--814},
@@ -246,7 +245,7 @@
 @article{reed1990adaptive,
   title={Adaptive multiple-band CFAR detection of an optical pattern with unknown spectral distribution},
   author={Reed, Irving S and Yu, Xiaoli},
-  journal={IEEE transactions on acoustics, speech, and signal processing},
+  journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
   volume={38},
   number={10},
   pages={1760--1770},
@@ -257,7 +256,7 @@
 @article{campos2016evaluation,
   title={On the evaluation of unsupervised outlier detection: measures, datasets, and an empirical study},
   author={Campos, Guilherme O and Zimek, Arthur and Sander, J{\"o}rg and Campello, Ricardo JGB and Micenkov{\'a}, Barbora and Schubert, Erich and Assent, Ira and Houle, Michael E},
-  journal={Data mining and knowledge discovery},
+  journal={Data Mining and Knowledge Discovery},
   volume={30},
   number={4},
   pages={891--927},
@@ -289,8 +288,7 @@
   year    = {2019},
   volume  = {20},
   number  = {96},
-  pages   = {1-7},
-  url     = {http://jmlr.org/papers/v20/19-011.html}
+  pages   = {1-7}
 }
 
 @article{kerner2020comparison,
@@ -338,63 +336,15 @@
   month = {13--18 Jul},
 }
 
-
-@Misc{planetdata,
-  author =    "Planet Team",
-  organization = {Planet},
-  title =     {Planet Application Program Interface: In Space for Life on Earth},
-  year =      {2018--},
-  url = "https://api.planet.com"
-}
-
-@ARTICLE{DESY1,
-       author = {{Zuntz}, J. and {Sheldon}, E. and {Samuroff}, S. and {Troxel}, M.~A. and
-         {Jarvis}, M. and {MacCrann}, N. and {Gruen}, D. and {Prat}, J. and
-         {S{\'a}nchez}, C. and {Choi}, A. and {Bridle}, S.~L. and
-         {Bernstein}, G.~M. and {Dodelson}, S. and {Drlica-Wagner}, A. and
-         {Fang}, Y. and {Gruendl}, R.~A. and {Hoyle}, B. and {Huff}, E.~M. and
-         {Jain}, B. and {Kirk}, D. and {Kacprzak}, T. and {Krawiec}, C. and
-         {Plazas}, A.~A. and {Rollins}, R.~P. and {Rykoff}, E.~S. and
-         {Sevilla-Noarbe}, I. and {Soergel}, B. and {Varga}, T.~N. and
-         {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and
-         {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
-         {Bertin}, E. and {Buckley-Geer}, E. and {Burke}, D.~L. and
-         {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Carretero}, J. and
-         {Castander}, F.~J. and {Crocce}, M. and {Cunha}, C.~E. and
-         {D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, C. and
-         {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Doel}, P. and
-         {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and
-         {Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and
-         {Fosalba}, P. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and
-         {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
-         {Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and
-         {Honscheid}, K. and {James}, D.~J. and {Jeltema}, T. and
-         {Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kuehn}, K. and
-         {Kuhlmann}, S. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and
-         {Lima}, M. and {Maia}, M.~A.~G. and {March}, M. and {Martini}, P. and
-         {Melchior}, P. and {Menanteau}, F. and {Miller}, C.~J. and
-         {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and {Nichol}, R.~C. and
-         {Ogando}, R.~L.~C. and {Roe}, N. and {Romer}, A.~K. and {Roodman}, A. and
-         {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and
-         {Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and
-         {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and
-         {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
-         {Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and
-         {Wechsler}, R.~H. and {Zhang}, Y. and {DES Collaboration}},
-        title = "{Dark Energy Survey Year 1 results: weak lensing shape catalogues}",
-      journal = {MNRAS},
-     keywords = {gravitational lensing: weak, methods: data analysis, techniques: image processing, catalogues, surveys, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
-         year = 2018,
-        month = nov,
-       volume = {481},
-       number = {1},
-        pages = {1149-1182},
-          doi = {10.1093/mnras/sty2219},
-archivePrefix = {arXiv},
-       eprint = {1708.01533},
- primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.481.1149Z},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{zuntz2018dark,
+  title={Dark Energy Survey Year 1 results: weak lensing shape catalogues},
+  author={Zuntz, Joe and Sheldon, Erin and Samuroff, S and Troxel, M A and Jarvis, M and MacCrann, N and Gruen, D and Prat, J and S{\'a}nchez, C and Choi, A and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={481},
+  number={1},
+  pages={1149--1182},
+  year={2018},
+  publisher={Oxford University Press}
 }
 
 @Article{lupton99,
