Fix typo in manuscript.

--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -469,7 +469,7 @@ We constructed three datasets to evaluate the utility of DORA and
 algorithm performance for a variety of scientific domains
  (astrophysics, planetary science, and Earth science). We also included a 
  benchmark dataset that uses MNIST and Fashion-MNIST. Table \ref{tab:datasets}
- summarizes the number of unlabeled samples used for training evaluation for
+ summarizes the number of unlabeled samples used for training and evaluation for
  each dataset. We describe each dataset in detail below.
  
  \begin{table}
@@ -711,7 +711,7 @@ data types.
 
 For the astrophysics dataset (Figure~\ref{fig:des_results}), DEMUD was omitted due to computational time 
 and LRX was omitted as it applies only to image data.  Of the remaining methods, 
-PCA achieved the highest precision, following by RX.  Negative sampling 
+PCA achieved the highest precision, followed by RX.  Negative sampling 
 performs well initially before its performance drops off.  The PAE finds the most outliers 
 overall.  
 
